--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 <footer class="mastfoot mt-auto footer">
                   
                      <div class="row">
-                         <div class="col md-3"><p>Info</p></div>
-                         <div class="col md-3"><p>Sign Up</p></div>
-                         <div class="col md-3"><p>Re-Connect</p></div>
+                         <div class="col md-3"><p></p></div>
+                         <div class="col md-3"><p></p></div>
+                         <div class="col md-3"><p></p></div>
                      </div>
                      
                 </footer>
